0.5.1 - TBD

* Added a "background" for tile set palette
+ Added the Shifted view, which emulates several tiling configurations
+ Added "custom" brushes
* Added support for layer locking (not editable when locked)
+ Added support for tmx.gz map files
+ Added the ability to merge tile images when layers are merged
* Made current zoom level be used by the snapshot saving feature
* Fixed drawing on invisible layers
+ Fixed transformation so that it respects selections
* Fixed loading of plugins that only do export and no import

0.5.0 - December 14th, 2004

* Added width and height attributes to layer element
* Added layer properties, analoguous to tile and map properties
* Added a version attribute to the map tag
* Added a basedir attribute to the tileset tag (suggested by Radomir
  Dopieralski)
* Added support for shared images (merged in Rainer Deyke's shared images code)
* Added support for masked tileset images
* Added support for highlighting tile under cursor
* Added support for creating an image snapshot of the map
* Added additional zoom levels (by Marc Ilgen)
* Added background color option (by Marc Ilgen)
* Added option to show coordinates on each tile (suggested by Ahmed Mohombe)
* Added an option whether to automatically create tiles from tileset images
  upon import or not.
* Added support for reading TMX/TSX files from URLs
* Added the RandomBrush for doing 'spray-paint' painting (suggested
  by Rainer Deyke)
* Added the brush dialog, and support for a wide range of brush operations
  (Nephilim, Rainer Deyke, et al.)
* Added a message framework for reporting load/save problems to the user
* Improved GUI in several places
* Improved TMX loading, it is now much more forgiving
* Optimized rendering of isometric maps
* Completed the Search/Replace dialog
* Changed the MultisetListRenderer to show tiles actual-size when selected
* Generalized the dialogs for properties and added delete capabilities.
* Fixed determining the relative path to tileset images