@@ -6,9 +6,11 @@
 * Added support for layer locking (not editable when locked)
 + Added support for tmx.gz map files
 + Added the ability to merge tile images when layers are merged
+* Added selection addition and substraction via shift and ctrl respectively
 * Made current zoom level be used by the snapshot saving feature
 * Fixed drawing on invisible layers
 + Fixed transformation so that it respects selections
+* Fixed a small bug in selections not including the current tile position
 * Fixed loading of plugins that only do export and no import
 
 0.5.0 - December 14th, 2004
